# Azure-Kinect-Sensor-SDK

./: CMakeLists.txt
examples/: CMakeLists.txt
examples/single_stream/: CMakeLists.txt  main.c  readme.md
examples/stream_server/: CMakeLists.txt  main.c  readme.md  rvl_compress.c  rvl_compress.h
